Made user message fixed position on mobile.

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -33,6 +33,10 @@
     }
   }
 
+  .userMessage{
+    position: fixed;
+  }
+
   .filterForm{
     text-align: center;
     width: 95%;
